[package]
name = "rabp"
version = "0.1.0"
authors = ["Wolfgang Kuehl <wolfgang@cwkuehl.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile]
dev = { opt-level = 0, debuginfo = 2, panic = "unwind" }
release = { opt-level = 3, panic = "abort" }

[dependencies]
basis = { path = "./basis" }
rep = { path = "./rep" }
service = { path = "./service" }
actix-cors = "0.6"
actix-files = "0.6"
#actix-session = { version = "0.8", features = ["cookie-session"] }
actix-web = { version = "4" , features = ["rustls-0_21"] }
actix-web-httpauth = "0.8"
awc = { version = "3.2", features = ["openssl"] }
chrono = "0.4"
derive_more = "0.99"
diesel = { version = "2.1", features = ["sqlite", "chrono", "r2d2"] }
#diesel-async = { version = "0.4", features = ["sqlite"] }
dotenv = "0.15"
env_logger = "0.10"
envy = "0.4"
futures-util = "0.3"
jsonwebtoken = "8.0"
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rustls = "0.21"
rustls-pemfile = "1.0"
serde = "1.0"
serde_json = "1.0"
