[package]
name = "rabp"
version = "0.2.0"
authors = ["Wolfgang Kuehl <wolfgang@cwkuehl.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile]
dev = { opt-level = 0, debuginfo = 2, panic = "unwind" }
release = { opt-level = 3, panic = "abort" }

[dependencies]
basis = { path = "./basis" }
rep = { path = "./rep" }
service = { path = "./service" }
actix-cors = "0.7.1"
actix-files = "0.6.6"
#actix-session = { version = "0.8", features = ["cookie-session"] }
actix-web = { version = "4.11" , features = ["rustls-0_21"] }
actix-web-httpauth = "0.8.2"
awc = { version = "3.7", features = ["openssl"] }
chrono = "0.4.41"
derive_more = "2.0.1"
diesel = { version = "2.2.12", features = ["sqlite", "chrono", "r2d2"] }
#diesel-async = { version = "0.4", features = ["sqlite"] }
dotenv = "0.15"
env_logger = "0.11.8"
envy = "0.4.2"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
lazy_static = "1.5"
log = "0.4"
# pkg_compile_time = "0.1.3" # TODO Fehler wegen altem crate time
r2d2 = "0.8.10"
r2d2_sqlite = "0.31"
rustls = "0.21.7" # "0.23.31" # enthalten in tokio-rustls
rustls-pemfile = "2.2"
# rustls-pki-types = "1.11.0" # "1.12.0"
serde = "1.0.219"
serde_json = "1.0.142"

# Korrekturversuch
time = "0.3.41"