[package]
name = "basis"
version = "0.1.0"
authors = ["Wolfgang Kuehl <wolfgang@cwkuehl.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", features = ["serde"] }
lazy_static = "1.4"
strum = { version = "*" } # enums and strings
strum_macros = { version = "*" }
uuid = { version = "*", features = ["v4"] }

[dev-dependencies]
