[package]
name = "service"
version = "0.1.0"
authors = ["Wolfgang Kuehl <wolfgang@cwkuehl.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basis = { path = "../basis" }
chrono = { version = "*", features = ["serde"] }
derive-debug = "0.1"
diesel = { version = "*", features = ["sqlite", "chrono"] }
rep = { path = "../rep" }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
heck = { version = "*" }      # camelCase
quick-xml = { version = "*" } # parse xml
